word-wrap: break-word added to break long links, other width issues in openresponse-text resolved

--- a/components/elements/dialoguebox/TypingPlaceholder.module.css
+++ b/components/elements/dialoguebox/TypingPlaceholder.module.css
@@ -53,6 +53,7 @@
 
 @media (max-width: 600px) {
     .typing {
+        padding-left: 0.4em;
         height: 25px;
     }
 }
